@@ -1,5 +1,5 @@
 package net.loveruby.cflat.sysdep.x86;
 
-enum RegKind {
+enum RegisterClass {
     AX, BX, CX, DX, SI, DI, SP, BP;
 }
